--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,12 @@
     box-sizing: border-box;
 }
 
+body{
+    background: url(/images/background.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
 .container{ 
-    background: linear-gradient(135deg,#022761, #af8ee9);
     min-height: 100vh;
     width:100%;
     padding:10px;
