--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background: url(/images/background.jpg);
+    background: url(./images/background.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
